@@ -6,6 +6,7 @@
  */
 
 require_once JPATH_BASE.'/libraries/joomla/application/component/controller.php';
+
 /**
  * Test class for JController.
  * Generated by PHPUnit on 2009-10-08 at 21:18:27.
@@ -18,7 +19,11 @@ class JControllerTest extends PHPUnit_Framework_TestCase
 	 */
 	protected function setUp()
 	{
-		//$this->object = new JController;
+		if (!defined('JPATH_COMPONENT')) {
+			define('JPATH_COMPONENT', JPATH_BASE.'/components/com_foobar');
+		}
+
+		include_once 'JControllerHelper.php';
 	}
 
 	/**
@@ -30,34 +35,131 @@ class JControllerTest extends PHPUnit_Framework_TestCase
 	}
 
 	/**
-	 * @todo Implement testGetInstance().
+	 * Test JController::__construct
+	 *
+	 * @since	1.6
 	 */
-	public function testGetInstance()
+	public function test__construct()
 	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete('This test has not been implemented yet.');
+		$controller = new TestController;
 	}
 
 	/**
-	 * @todo Implement testExecute().
+	 * Test JController::addModelPath
+	 *
+	 * @since	1.6
 	 */
-	public function testExecute()
+	public function testAddModelPath()
 	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete('This test has not been implemented yet.');
+		// Include JModel as this method is a proxy for JModel::addIncludePath
+		require_once JPATH_BASE.'/libraries/joomla/application/component/model.php';
+
+		$path = dirname(__FILE__).'/addmodelpath';
+		JController::addModelPath($path);
+
+		// The default path is the class file folder/forms
+		$valid = JPATH_LIBRARIES.DS.'joomla'.DS.'form/fields';
+
+		$this->assertThat(
+			in_array($path, JModel::addIncludePath()),
+			$this->isTrue(),
+			'Line:'.__LINE__.' The path should be added to the JModel paths.'
+		);
 	}
 
 	/**
-	 * @todo Implement testAuthorize().
+	 * Test JController::addPath
+	 *
+	 * Note that addPath call JPath::check which will exit if the path is out of bounds.
+	 * If execution halts for some reason, a bad path could be the culprit.
+	 *
+	 * @since	1.6
+	 */
+	public function testAddPath()
+	{
+		$controller = new JControllerInspector;
+
+		$path = dirname(__FILE__).'//foobar';
+		$controller->addPath('test', $path);
+		$paths = $controller->getPaths();
+
+		$this->assertThat(
+			isset($paths['test']),
+			$this->isTrue(),
+			'Line:'.__LINE__.' The path type should be set.'
+		);
+
+		$this->assertThat(
+			is_array($paths['test']),
+			$this->isTrue(),
+			'Line:'.__LINE__.' The path type should be an array.'
+		);
+
+		$this->assertThat(
+			$paths['test'][0],
+			$this->equalTo(dirname(__FILE__).'/foobar/'),
+			'Line:'.__LINE__.' The path type should be present, clean and with a trailing slash.'
+		);
+	}
+
+	/**
+	 * Test JController::addViewPath
+	 */
+	public function testAddViewPath()
+	{
+		$controller = new JControllerInspector;
+
+		$path = dirname(__FILE__).'/views';
+		$controller->addViewPath($path);
+		$paths = $controller->getPaths();
+
+		$this->assertThat(
+			isset($paths['view']),
+			$this->isTrue(),
+			'Line:'.__LINE__.' The path type should be set.'
+		);
+
+		$this->assertThat(
+			is_array($paths['view']),
+			$this->isTrue(),
+			'Line:'.__LINE__.' The path type should be an array.'
+		);
+
+		$this->assertThat(
+			$paths['view'][0],
+			$this->equalTo(dirname(__FILE__).'/views/'),
+			'Line:'.__LINE__.' The path type should be present, clean and with a trailing slash.'
+		);
+	}
+
+	/**
+	 * Test JController::authorize
 	 */
 	public function testAuthorize()
 	{
+		$this->markTestSkipped('This method is depracated.');
+	}
+
+	/**
+	 * Test JController::createModel
+	 */
+	public function testCreateModel()
+	{
 		// Remove the following lines when you implement this test.
 		$this->markTestIncomplete('This test has not been implemented yet.');
 	}
 
 	/**
-	 * @todo Implement testDisplay().
+	 * Test JController::createView
+	 */
+	public function testCreateView()
+	{
+		// Remove the following lines when you implement this test.
+		$this->markTestIncomplete('This test has not been implemented yet.');
+	}
+
+	/**
+	 * Test JController::display
 	 */
 	public function testDisplay()
 	{
@@ -66,16 +168,25 @@ class JControllerTest extends PHPUnit_Framework_TestCase
 	}
 
 	/**
-	 * @todo Implement testRedirect().
+	 * Test JController::execute
 	 */
-	public function testRedirect()
+	public function testExecute()
 	{
 		// Remove the following lines when you implement this test.
 		$this->markTestIncomplete('This test has not been implemented yet.');
 	}
 
 	/**
-	 * @todo Implement testGetModel().
+	 * Test JController::getInstance
+	 */
+	public function testGetInstance()
+	{
+		// Remove the following lines when you implement this test.
+		$this->markTestIncomplete('This test has not been implemented yet.');
+	}
+
+	/**
+	 * Test JController::getModel
 	 */
 	public function testGetModel()
 	{
@@ -84,34 +195,7 @@ class JControllerTest extends PHPUnit_Framework_TestCase
 	}
 
 	/**
-	 * @todo Implement testAddModelPath().
-	 */
-	public function testAddModelPath()
-	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete('This test has not been implemented yet.');
-	}
-
-	/**
-	 * @todo Implement testGetTasks().
-	 */
-	public function testGetTasks()
-	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete('This test has not been implemented yet.');
-	}
-
-	/**
-	 * @todo Implement testGetTask().
-	 */
-	public function testGetTask()
-	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete('This test has not been implemented yet.');
-	}
-
-	/**
-	 * @todo Implement testGetName().
+	 * Test JController::getName
 	 */
 	public function testGetName()
 	{
@@ -120,7 +204,34 @@ class JControllerTest extends PHPUnit_Framework_TestCase
 	}
 
 	/**
-	 * @todo Implement testGetView().
+	 * Test JController::getTask
+	 */
+	public function testGetTask()
+	{
+		// Remove the following lines when you implement this test.
+		$this->markTestIncomplete('This test has not been implemented yet.');
+	}
+
+	/**
+	 * Test JController::getTasks
+	 */
+	public function testGetTasks()
+	{
+		$controller = new TestController;
+
+		$this->assertThat(
+			$controller->getTasks(),
+			$this->equalTo(
+				array(
+					'task1', 'task2', 'display'
+				)
+			),
+			'Line:'.__LINE__.' The available tasks should be the public tasks in the derived controller plus "display".'
+		);
+	}
+
+	/**
+	 * Test JController::getView
 	 */
 	public function testGetView()
 	{
@@ -129,25 +240,16 @@ class JControllerTest extends PHPUnit_Framework_TestCase
 	}
 
 	/**
-	 * @todo Implement testAddViewPath().
+	 * Test JController::redirect
 	 */
-	public function testAddViewPath()
+	public function testRedirect()
 	{
 		// Remove the following lines when you implement this test.
 		$this->markTestIncomplete('This test has not been implemented yet.');
 	}
 
 	/**
-	 * @todo Implement testRegisterTask().
-	 */
-	public function testRegisterTask()
-	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete('This test has not been implemented yet.');
-	}
-
-	/**
-	 * @todo Implement testRegisterDefaultTask().
+	 * Test JController::registerDefaultTask
 	 */
 	public function testRegisterDefaultTask()
 	{
@@ -156,25 +258,16 @@ class JControllerTest extends PHPUnit_Framework_TestCase
 	}
 
 	/**
-	 * @todo Implement testSetMessage().
+	 * Test JController::registerTask
 	 */
-	public function testSetMessage()
+	public function testRegisterTask()
 	{
 		// Remove the following lines when you implement this test.
 		$this->markTestIncomplete('This test has not been implemented yet.');
 	}
 
 	/**
-	 * @todo Implement testSetRedirect().
-	 */
-	public function testSetRedirect()
-	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete('This test has not been implemented yet.');
-	}
-
-	/**
-	 * @todo Implement testSetAccessControl().
+	 * Test JController::setAccessControl
 	 */
 	public function testSetAccessControl()
 	{
@@ -183,36 +276,27 @@ class JControllerTest extends PHPUnit_Framework_TestCase
 	}
 
 	/**
-	 * @todo Implement test_createModel().
+	 * Test JController::setMessage
 	 */
-	public function test_createModel()
+	public function testSetMessage()
 	{
 		// Remove the following lines when you implement this test.
 		$this->markTestIncomplete('This test has not been implemented yet.');
 	}
 
 	/**
-	 * @todo Implement test_createView().
+	 * Test JController::setPath
 	 */
-	public function test_createView()
+	public function testSetPath()
 	{
 		// Remove the following lines when you implement this test.
 		$this->markTestIncomplete('This test has not been implemented yet.');
 	}
 
 	/**
-	 * @todo Implement test_setPath().
+	 * Test JController::setRedirect
 	 */
-	public function test_setPath()
-	{
-		// Remove the following lines when you implement this test.
-		$this->markTestIncomplete('This test has not been implemented yet.');
-	}
-
-	/**
-	 * @todo Implement test_addPath().
-	 */
-	public function test_addPath()
+	public function testSetRedirect()
 	{
 		// Remove the following lines when you implement this test.
 		$this->markTestIncomplete('This test has not been implemented yet.');
